# vpnbot

./: .dockerignore  .drone.yml  .gitignore  Cargo.toml  Dockerfile  sqlx-data.json
migrations/: 20220907180041_init.sql  20220911212137_telegram.sql  20220922232843_telegram_pair.sql  20220925023224_config_requests.sql  20230308084741_stats.sql  20230311065709_v2.sql  20230311070330_v2_import.sql  20230620133942_privkey.sql  20230624135940_config_rm.sql
service/: run
src/: database.rs  main.rs  response.rs  roles.rs  rules.rs  service.rs  telegram.rs  traits.rs  ui.rs  utils.rs  wireguard.rs
src/netlink/: error.rs  mod.rs  routes.rs  rules.rs  wireguard.rs
src/netlink/wireguard/: interface.rs  peer.rs  update.rs
src/service/: configs.rs  keys.rs  requests.rs  user.rs  wgcfg.rs
src/ui/telegram/: client.rs  help.rs  mod.rs  user.rs
src/ui/telegram/admin/: buttons.rs  mod.rs
src/ui/web/: api.rs  mod.rs  response.rs
src/workers/: mod.rs  stats.rs
