[package]
name = "vpn_selector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
netlink-packet-route = { git = "https://github.com/little-dude/netlink" }
netlink-packet-wireguard = { git = "https://github.com/little-dude/netlink" }
netlink-packet-core = { git = "https://github.com/little-dude/netlink" }
netlink-packet-generic = { git = "https://github.com/little-dude/netlink" }
genetlink = { git = "https://github.com/little-dude/netlink" }
netlink-sys = { version = "*" }
axum = { version = "0.4.8" }
serde = { version = "1.0.136", features = ["derive"] }
async-trait = { version = "0.1.52" }
wireguard-control = { version = "1.5.0" }
sqlx = { version = "0.6", features = ["sqlite", "runtime-tokio-rustls", "offline"] }
cidr = { version = "0.2.1" }
thiserror = { version = "1" }
tracing = { version = "0.1" }
clap = { version = "=3.2.2", features = ["derive", "env"] }
