[package]
name = "vpn_selector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
netlink-packet-route = { git = "https://github.com/little-dude/netlink" }
netlink-packet-wireguard = { git = "https://github.com/little-dude/netlink" }
netlink-packet-core = { git = "https://github.com/little-dude/netlink" }
netlink-packet-generic = { git = "https://github.com/little-dude/netlink" }
genetlink = { git = "https://github.com/little-dude/netlink" }
netlink-sys = { version = "*" }
axum = { version = "0.4.8" }
serde = { version = "1.0.136", features = ["derive"] }
async-trait = { version = "0.1.52" }
sqlx = { version = "0.6", features = ["sqlite", "runtime-tokio-rustls", "offline"] }
cidr = { version = "0.2.1" }
thiserror = { version = "1" }
tracing = { version = "0.1" }
clap = { version = "=3.2.2", features = ["derive", "env"] }
pretty_env_logger = { version = "0.4.0" }
teloxide = { version = "0.10.0", features = ["macros"] }
futures = { version = "0.3.21" }
base64 = { version = "0.12" }
x25519-dalek = {version = "2.0.0-pre.1"}
rand = { version = "0.8" }

[profile.release]
debug=true
